fix spacing profile info and edit button position

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -35,7 +35,7 @@
   grid-area: title;
   margin: 0;
   padding-right: 18px;
-  padding-bottom: 7px;
+
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -66,6 +66,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin-top: 7px;
 }
 
 .profile__add-button {
